[package]
name = "bunpack_proc_macros"
version = "0.1.1"
edition = "2024"
description = "Procedural macros for bunpack"
license = "MIT"
repository = "https://github.com/Fabus1184/bunpack"

[lib]
proc-macro = true

[dependencies]
peg = "0.8.6"
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["extra-traits", "full"] }
